<resources>
    <string name="keyboard_enter_label">ENTER</string>
    <string name="keyboard_go_label">GO</string>
    <string name="keyboard_search_label">SEARCH</string>
    <string name="keyboard_send_label">SEND</string>
    <string name="keyboard_next_label">NEXT</string>
    <string name="keyboard_done_label">DONE</string>
    <string name="keyboard_space_label">space</string>
    <string name="permission_allow">Allow</string>
    <string name="permission_reject">Don’t Allow</string>
    <string name="permission_enable">Enable</string>
    <string name="permission_enabled">Enabled</string>
    <string name="permission_camera">Will you allow %1$s to use your camera?</string>
    <string name="permission_microphone">Will you allow %1$s to use your microphone?</string>
    <string name="permission_camera_and_microphone">Will you allow %1$s to use your camera and microphone?</string>
    <string name="permission_location">Will you allow %1$s to access your location?</string>
    <string name="permission_notification">Will you allow %1$s to send notifications?</string>
    <string name="permission_read_external_storage">Will you allow %1$s to read your external storage?</string>
    <string name="permission_persistent_storage">Will you allow %1$s to store data in persistent storage?</string>
    <string name="permission_rationale_title">Additional permissions</string>
    <string name="permission_camera_rationale">Taking images of the world around you requires permission to use your camera.</string>
    <string name="permission_microphone_rationale">Conducting voice searches and text input requires permission to use your microphone.</string>
    <string name="permission_camera_and_microphone_rationale">Providing services like videoconferencing requires permission to use your camera and microphone.</string>
    <string name="permission_location_rationale">Offering nearby news and content requires permission to access your location.</string>
    <string name="permission_notification_rationale">Notifying you of news and updates requires permission to send notifications.</string>
    <string name="permission_read_external_storage_rationale">Opening files on your device requires permission to read your external storage.</string>
    <string name="permission_persistent_storage_rationale">Saving and opening files on your device requires permission to store data in persistent storage.</string>
    <string name="settings_crash_reporting">Crash Reporting</string>
    <string name="settings_telemetry">Telemetry</string>
    <string name="settings_privacy_security">Privacy &amp; Security</string>
    <string name="settings_privacy_saved_logins">Saved Logins</string>
    <string name="settings_privacy_logins">Logins And Passwords</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_terms_service">Terms of Service</string>
    <string name="settings_privacy_search_engine_title">Search engine</string>
    <string name="settings_privacy_choose_search_engine_description">Choose your preferred search engine.</string>
    <string name="settings_privacy_choose_search_engine_reset">Reset Search Engine Settings</string>
    <string name="add_search_engine_title">Add Search Engine</string>
    <string name="add_search_engine_name_title">Name</string>
    <string name="add_search_engine_name_hint">Enter search engine name</string>
    <string name="add_search_engine_search_url_title">Search URL</string>
    <string name="add_search_engine_search_url_hint">https://example.com/search?q={searchTerms}</string>
    <string name="add_search_engine_suggest_url_title">Suggestion URL (optional)</string>
    <string name="add_search_engine_suggest_url_hint">https://example.com/suggest?q={searchTerms}</string>
    <string name="add_search_engine_save">Save</string>
    <string name="add_search_engine_cancel">Cancel</string>
    <string name="edit_search_engine_title">Edit Search Engine</string>
    <string name="edit_search_engine_save">Update</string>
    <string name="search_engine_deleted">Search engine deleted</string>
    <string name="delete_search_engine_dialog_title">Delete Search Engine</string>
    <string name="delete_search_engine_dialog_text">Are you sure you want to delete the %1$s search engine?</string>
    <string name="custom_search_engines_title">Custom Search Engines</string>
    <string name="custom_search_engines_empty">No custom search engines. Use the Add Search Engine button to add one.</string>
    <string name="custom_search_engines_manage">Custom Search Engines</string>
    <string name="custom_search_engines_list_header">Custom Search Engines</string>
    <string name="search_engine_error_url_required">URL is required</string>
    <string name="search_engine_error_url_placeholder">URL must contain %s or {searchTerms} placeholder</string>
    <string name="search_engine_error_url_scheme">URL must have a scheme (http:// or https://)</string>
    <string name="search_engine_error_url_scheme_unsupported">Only http and https URLs are allowed</string>
    <string name="search_engine_error_url_host">URL must have a valid host</string>
    <string name="search_engine_error_url_private">Private/localhost URLs are not allowed for security reasons</string>
    <string name="search_engine_error_name_required">Name is required</string>
    <string name="search_engine_error_name_too_long">Name must be 50 characters or less</string>
    <string name="settings_privacy_policy_popups_title_v1">Exceptions for Pop-Ups</string>
    <string name="settings_privacy_policy_popups_description">You can specify which websites are allowed to open pop-up windows</string>
    <string name="settings_privacy_policy_webxr_title">Virtual Reality permissions</string>
    <string name="settings_privacy_policy_webxr_description">The following sites are blocked from letting WebXR API access your VR device.</string>
    <string name="settings_privacy_policy_webxr_empty_description">When you open a website which uses WebXR, you can open a dialog that lets you to block WebXR on that site.</string>
    <string name="settings_privacy_policy_webxr_reset">Reset the sites not allowed to access Virtual Reality devices.</string>
    <string name="settings_privacy_policy_tracking_title">Exceptions for Enhanced Tracking Protection</string>
    <string name="settings_privacy_policy_tracking_description">You’ve turned off protections on these websites.</string>
    <string name="settings_privacy_policy_tracking_empty_description">When you allow a website to track your activity, they will appear here.</string>
    <string name="settings_privacy_policy_tracking_reset">Reset the Exceptions for Enhanced Tracking Protection.</string>
    <string name="settings_privacy_policy_login_exceptions_title">Login Exceptions</string>
    <string name="settings_privacy_policy_login_exceptions_description">Logins that are not saved will be shown here</string>
    <string name="settings_privacy_policy_login_exceptions_empty_description">Logins that are not saved will be shown here.</string>
    <string name="settings_privacy_policy_login_exceptions_reset">Reset the login exceptions.</string>
    <string name="pop_up_site_switch_allow">Allow</string>
    <string name="pop_up_site_switch_block">Block</string>
    <string name="settings_developer_options">Developer Options</string>
    <string name="settings_updates">Updates</string>
    <string name="update_options_title">Updates</string>
    <string name="update_check_automatically">Check for updates automatically</string>
    <string name="update_channel_description">Update channel</string>
    <string name="update_channel_release">Release</string>
    <string name="update_channel_release_prerelease">Release + Prerelease</string>
    <string name="update_check_now_description">Check the VIVE XR Elite GitHub releases now</string>
    <string name="update_check_now_button">Check now</string>
    <string name="update_github_repository_description">Wolvic for VIVE XR Elite source code and releases</string>
    <string name="update_checking">Checking GitHub for updates…</string>
    <string name="update_up_to_date">Wolvic is up to date. Installed versionCode: %1$d</string>
    <string name="update_check_error">Could not check for updates. Check the network connection and try again.</string>
    <string name="update_available_description">%1$s · versionCode %2$d · %3$s</string>
    <string name="update_open_github">Open GitHub</string>
    <string name="update_available_title">Wolvic update available</string>
    <string name="update_available_body">%1$s\nNew versionCode: %2$d\nInstalled versionCode: %3$d</string>
    <string name="update_later">Later</string>
    <string name="settings_fxa_account_sign_in">Sign Into Account</string>
    <string name="settings_fxa_account_manage">Manage Account</string>
    <string name="settings_fxa_account_sign_out">Sign Out</string>
    <string name="settings_fxa_account_reconnect">Reconnect</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_follow_device">Follow device language</string>
    <string name="settings_language_settings">Language Settings</string>
    <string name="settings_language_choose_language_webpage_content">Choose your preferred language for displaying pages</string>
    <string name="settings_language_choose_language_voice_search">Choose your preferred language for voice search</string>
    <string name="settings_language_choose_display_language_title">%1$s Display Language</string>
    <string name="settings_language_choose_language_display_description">Choose the language used to display menus, messages, and notifications.</string>
    <string name="settings_language_choose_language_voice_search_service_title">Voice Search Service</string>
    <string name="settings_language_choose_language_voice_search_service_description">Choose your preferred online service for voice search.</string>
    <string name="settings_language_choose_language_voice_search_title">Voice Search Language</string>
    <string name="settings_language_choose_language_voice_search_description">Choose your preferred language for voice search.</string>
    <string name="settings_language_choose_language_content_title">Preferred Website Languages</string>
    <string name="settings_language_choose_language_content_description">Web pages are sometimes offered in more than one language. Choose the languages you want to display in order of preference to the left side.</string>
    <string name="settings_language_english">English (US)</string>
    <string name="settings_language_english_us">English (US)</string>
    <string name="settings_language_english_uk">English (UK)</string>
    <string name="settings_language_traditional_chinese">Chinese (Traditional/Zhuyin)</string>
    <string name="settings_language_simplified_chinese">Chinese (Simplified/Pinyin)</string>
    <string name="settings_language_japanese">Japanese</string>
    <string name="settings_language_french">French</string>
    <string name="settings_language_galician">Galician</string>
    <string name="settings_language_german">German</string>
    <string name="settings_language_spanish">Spanish</string>
    <string name="settings_language_spanish_spain">Spanish (Spain)</string>
    <string name="settings_language_korean">Korean</string>
    <string name="settings_language_ukrainian">Ukrainian</string>
    <string name="settings_language_italian">Italian</string>
    <string name="settings_language_russian">Russian</string>
    <string name="settings_language_polish">Polish</string>
    <string name="settings_language_danish">Danish</string>
    <string name="settings_language_norwegian">Norwegian</string>
    <string name="settings_language_norwegian_bokmaal">Norwegian (Bokmaal)</string>
    <string name="settings_language_norwegian_nynorsk">Norwegian (Nynorsk)</string>
</resources>